// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't set focus inside expand title when user hits up arrow from second line of expand body 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "onehi",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "content": Array [
            Object {
              "text": "two",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
  ],
  "type": "doc",
}
`;

exports[`sets focus inside expand title when user hits up arrow 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "hi",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`sets selection below collapsed expand when user hits down arrow 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": false,
        "title": "",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "content": Array [
        Object {
          "text": "hi",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`sets selection inside expand body when user hits down arrow 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "hi",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`sets selection inside expand title when user hits left arrow 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "hi",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`sets selection inside expand title when user hits left arrow twice 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "hi",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`sets selection inside expand title when user hits right arrow twice 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "hi",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
